third_party/move/move-compiler-v2/tests/checking-lang-v2.4/cross_module_enum_access_01_package_err.exp

Diagnostics:
error: Invalid operation: field access on `m::Wrapper` can only be done within module `0xc0ffee::m` or modules in the same package
   ┌─ tests/checking-lang-v2.4/cross_module_enum_access_01_package_err.move:15:9
   │
15 │     fun test() {
   │         ^^^^
16 │         let x = m::make(22);
17 │         assert!(x.0 == 22, 1);
   │                 --- field access here
